--- a/lab1/Lab1-Report.tex
+++ b/lab1/Lab1-Report.tex
@@ -727,17 +727,16 @@ For each utilization value, we recorded the queueing time for each packet sent. 
 70\%&=0.0083786921238\,seconds\\
 80\%&=0.0148861562441\,seconds\\
 90\%&=0.0422212596784\,seconds\\
-95\%&=0.0289565539489\,seconds\\
-98\%&=0.0457814929168\,seconds
+95\%&=0.0714921688987\,seconds\\
+98\%&=0.0985421009293\,seconds
 \end{align*}
 
-As you can see from our data, the random exponential distribution function showed blips in our data. This is seen in that 90\% had a high queuing delay than 95\%. Nevertheless, it can be seen that as the utilization increases so does the queueing delay.
 
-In the graph below, we graphed our experimental data in blue and the theoretical data in green. The theoretical data was created by using the function described above. As 
+In the graph below, we graphed our experimental data in blue and the theoretical data in green. The theoretical data was created by using the function described above. 
 
-\includegraphics[width=11cm]{graphs/download-combined}
+\includegraphics[width=11cm]{lab1-graph}
 
-you can see from the graph, the ...
+As you can see from our data, our experimental data closely matches the theoretical data. The only variation is when utilization reaches 98\%.
 
 
 \end{document}
